se comenta el contador y se cambia el estilo de la descripcion de los productos

--- a/styles.css
+++ b/styles.css
@@ -333,7 +333,7 @@ nav {
 
 .content-container {
   display: flex;
-  height: 100vh;
+  height: 100%;
   align-items: center;
   justify-content: center;
   padding: 20px;
